--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -23,7 +23,7 @@ rubato = { version="0.8", optional=true }
 rand_xoshiro = { version="0.6", optional=true }
 thiserror = { version="1.0", optional=true }
 hound = { version="3.4", optional=true }
-hdf5 = { git="https://github.com/aldanor/hdf5-rust/", rev="40654f1", optional=true }
+hdf5 = { version="^0.8", optional=true }
 sled = { version="^0.34", optional=true }
 bincode = { version="^1.3", optional=true }
 ndarray = { version="^0.15", optional=true, features=["serde"] }
