--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,11 +17,10 @@ jobs:
         python-version: [3.5, 3.6, 3.7, 3.8, 3.9, 3.10]
     steps:
      - uses: actions/checkout@v1
-     - uses: actions-rs/toolchain@v1
-       with:
-         default: true
      - name: Build wheels
        run: |
+         curl https://sh.rustup.rs -sSf | sh -s -- -y
+         source $HOME/.cargo/env
          bash .github/workflows/build_linux_wheel.sh ${{ matrix.python-version }} pyDF/Cargo.toml
      - uses: actions/upload-artifact@v1
        with:
