--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,7 @@ jobs:
     container: ghcr.io/h5py/manylinux2010_x86_64-hdf5:latest
     strategy:
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8, 3.9, 3.10]
+        python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
     steps:
      - uses: actions/checkout@v1
      - name: Build wheels
