--- a/pyDF/Cargo.toml
+++ b/pyDF/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pyDF"
+name = "DeepFilterLib"
 version = "0.1.0"
 authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
 edition = "2018"
