--- a/pyDF-data/pyproject.toml
+++ b/pyDF-data/pyproject.toml
@@ -1,17 +1,18 @@
 [project]
+name = "DeepFilterDataLoader"
+version = "0.1.0"
 dependencies = ["numpy >= 1.20"]
 
 [project.optional-dependencies]
 torch = ["torch >= 1.8"]
 
 [build-system]
-requires = ["maturin>=0.10,<0.12"]
+requires = ["maturin>=0.11,<0.12"]
 build-backend = "maturin"
 
 [tool.maturin]
-manylinux = "off"
 sdist-include = ["Cargo.lock"]
-strip = "on"
+strip = true
 
 [tool.black]
 line-length = 100
