--- a/pyDF/pyproject.toml
+++ b/pyDF/pyproject.toml
@@ -1,12 +1,15 @@
 [project]
+name = "DeepFilterLib"
+version = "0.1.0"
 dependencies = ["numpy >= 1.20"]
 
 [build-system]
-requires = ["maturin>=0.10,<0.12"]
+requires = ["maturin>=0.11,<0.12"]
 build-backend = "maturin"
 
 [tool.maturin]
-strip = "on"
+sdist-include = ["Cargo.lock"]
+strip = true
 
 [tool.black]
 line-length = 100
