github: Try fix DeepFilterDataLoader manylinux wheel again

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
 
   linux-libdfdata-wheels:
     runs-on: ubuntu-latest
-    container: ghcr.io/h5py/manylinux2010_x86_64-hdf5:latest
+    container: ghcr.io/h5py/manylinux2010_x86_64-hdf5
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9, 3.10]
