--- a/pyDF/pyproject.toml
+++ b/pyDF/pyproject.toml
@@ -1,6 +1,10 @@
 [project]
 name = "DeepFilterLib"
 version = "0.1.0"
+classifiers = [
+    "Programming Language :: Rust"
+]
+requires-python = ">=3.6"
 dependencies = ["numpy >= 1.20"]
 
 [build-system]
