--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
 edition = "2018"
 
 [lib]
-name = "_libdfdata"
+name = "libdfdata"
 crate-type = ["cdylib"]
 path = "src/lib.rs"
 
