--- a/pyDF-data/pyproject.toml
+++ b/pyDF-data/pyproject.toml
@@ -1,6 +1,10 @@
 [project]
 name = "DeepFilterDataLoader"
 version = "0.1.1"
+classifiers = [
+    "Programming Language :: Rust"
+]
+requires-python = ">=3.6"
 dependencies = ["numpy >= 1.20"]
 
 [project.optional-dependencies]
