github: Use pip package ecosystem instead of poetry

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     directory: "/pyDf-data/"
     schedule:
       interval: "daily"
-  - package-ecosystem: "poetry"
+  - package-ecosystem: "pip"
     directory: "/DeepFilterNet/"
     schedule:
       interval: "daily"
