github: Dependabot typo

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,15 @@
 version: 2
 updates:
   - package-ecosystem: "cargo"
-    directory: "/libDf/"
+    directory: "/libDF/"
     schedule:
       interval: "daily"
   - package-ecosystem: "cargo"
-    directory: "/pyDf/"
+    directory: "/pyDF/"
     schedule:
       interval: "daily"
   - package-ecosystem: "cargo"
-    directory: "/pyDf-data/"
+    directory: "/pyDF-data/"
     schedule:
       interval: "daily"
   - package-ecosystem: "pip"
