--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -12,13 +12,12 @@ path = "src/lib.rs"
 default = []
 
 transforms = ["thiserror", "ndarray"]
-dataset = ["thiserror", "ndarray", "hdf5", "rand_xoshiro", "rayon", "serde_json", "serde", "lewton", "ogg", "hound", "rubato", "sled", "bincode"]
+dataset = ["thiserror", "ndarray", "hdf5", "rand", "rand_xoshiro", "rayon", "serde_json", "serde", "lewton", "ogg", "hound", "rubato", "sled", "bincode"]
 
 [dependencies]
-once_cell = "1.4.0"
 rustfft = "^6.0.1"
 realfft = "^2.0.1"
-rand = "0.8"
+rand = { version="0.8", optional=true }
 rubato = { version="0.10", optional=true }
 rand_xoshiro = { version="0.6", optional=true }
 thiserror = { version="1.0", optional=true }
