--- a/pyDF-data/pyproject.toml
+++ b/pyDF-data/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.4"
 classifiers = [
     "Programming Language :: Rust"
 ]
-requires-python = ">=3.6"
+requires-python = ">=3.7"
 dependencies = ["numpy >= 1.20"]
 
 [project.optional-dependencies]
@@ -20,7 +20,7 @@ strip = true
 
 [tool.black]
 line-length = 100
-target-version = ["py36", "py37", "py38", "py39"]
+target-version = ["py37", "py38", "py39"]
 include = '\.pyi?$'
 
 [tool.isort]
