--- a/pyDF/Cargo.toml
+++ b/pyDF/Cargo.toml
@@ -11,7 +11,7 @@ path = "src/lib.rs"
 
 [dependencies]
 df = { path = "../libDF", features = ["transforms"] }
-pyo3 = { version = "^0.14", default_features = true, features = ["extension-module"]}
-numpy = "^0.14"
-ndarray = "0.15"
+pyo3 = { version = "^0.15", default_features = true, features = ["extension-module"]}
+numpy = "^0.15"
+ndarray = "^0.15"
 sled = "^0.34"
