--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "df"
+name = "deep_filter"
 version = "0.1.5"
 authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
 edition = "2021"
