--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -21,15 +21,15 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-DeepFilterLib = { version = "^0.1" }
-numpy = "^1.20"
-loguru = "^0.5"
-DeepFilterDataLoader = { version = "^0.1", optional = true }
-icecream = { version = "^2", optional = true }
+python = ">=3.7,<4.0"
+DeepFilterLib = { version = ">=0.1.6,<0.2" }
+numpy = ">=1.20,<2.0"
+loguru = ">=0.5"
+DeepFilterDataLoader = { version = ">=0.1.6,<0.2", optional = true }
+icecream = { version = ">=2,<3", optional = true }
 
 [tool.poetry.extras]
-train = ["DeepFilterDataLoader"]
+train = ["DeepFilterDataLoader", "icecream"]
 
 [tool.poetry.scripts]
 deepFilter = "df.enhance:main"
