df: Add group_shuffle default to pretrained model config

--- a/DeepFilterNet/pretrained_models/DeepFilterNet/config.ini
+++ b/DeepFilterNet/pretrained_models/DeepFilterNet/config.ini
@@ -47,6 +47,7 @@ df_hidden_dim = 512
 df_num_layers = 2
 gru_groups = 8
 linear_groups = 8
+group_shuffle = True
 conv_dec_mode = transposed
 convt_depthwise = True
 dfop_method = real_unfold
