--- a/.github/workflows/black_flake8.yml
+++ b/.github/workflows/black_flake8.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         include:
           - {command: flake8, args: ""}
-          - {command: black, args: "--check"}
+          - {command: black, args: "--check ."}
     steps:
      - uses: actions/checkout@v2
      - uses: actions/setup-python@v2
