--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -21,17 +21,17 @@ include = [
 ]
 
 [tool.poetry.dependencies]
+deepfilterlib = "0.1.8"
+deepfilterdataloader = {version = "0.1.8", optional = true}
 python = ">=3.7,<4.0"
-DeepFilterLib = { version = ">=0.1.6,<0.2" }
 numpy = ">=1.20,<2.0"
 loguru = ">=0.5"
-DeepFilterDataLoader = { version = ">=0.1.6,<0.2", optional = true }
 icecream = { version = ">=2,<3", optional = true }
 pystoi = { version = "0.3", optional = true }
 semetrics = { git = "https://github.com/usimarit/semetrics.git", optional = true }
 
 [tool.poetry.extras]
-train = ["DeepFilterDataLoader", "icecream"]
+train = ["deepfilterdataloader", "icecream"]
 eval = ["pystoi", "semetrics"]
 
 [tool.poetry.scripts]
