--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "DeepFilterNet"
-version = "0.1.8"
+version = "0.1.9-pre"
 description = "Noise supression using deep filtering"
 authors = ["Hendrik Schröter"]
 repository = "https://github.com/Rikorose/DeepFilterNet"
@@ -21,8 +21,8 @@ include = [
 ]
 
 [tool.poetry.dependencies]
-deepfilterlib = "0.1.8"
-deepfilterdataloader = {version = "0.1.8", optional = true}
+deepfilterlib = {path = "../pyDF"}
+deepfilterdataloader = {path = "../pyDF-data"}
 python = ">=3.7,<4.0"
 numpy = ">=1.20,<2.0"
 loguru = ">=0.5"
