--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "deep_filter"
-version = "0.1.9-pre"
+version = "0.1.9"
 authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
 edition = "2021"
 description = "Noise supression using deep filtering"
