--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "DeepFilterNet"
-version = "0.1.9"
+version = "0.1.10-pre"
 description = "Noise supression using deep filtering"
 authors = ["Hendrik Schröter"]
 repository = "https://github.com/Rikorose/DeepFilterNet"
@@ -22,7 +22,7 @@ include = [
 
 [tool.poetry.dependencies]
 deepfilterlib = {path = "../pyDF"}
-deepfilterdataloader = {path = "../pyDF-data"}
+deepfilterdataloader = {path = "../pyDF-data", optional = true}
 python = ">=3.7,<4.0"
 numpy = ">=1.20,<2.0"
 loguru = ">=0.5"
