--- a/pyDF/Cargo.toml
+++ b/pyDF/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "DeepFilterLib"
-version = "0.1.9"
+version = "0.1.10-pre"
 authors = ["Hendrik Schröter <h.schroeter@pm.me>"]
 edition = "2021"
 
