--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -56,6 +56,7 @@ jobs:
           installer-parallel: true
       - name: Python cache
         uses: actions/cache@v2
+        id: cached-poetry-dependencies
         with:
           path: |
             .venv
@@ -63,11 +64,16 @@ jobs:
           key: venv-${{ matrix.os }}-${{ matrix.python }}-${{ hashFiles('DeepFilterNet/pyproject.toml') }}
       - name: Install build dependencies
         run: pip install maturin
+      - name: Install runtime dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != true
+        working-directory: DeepFilterNet
+        run: poetry install -E eval --no-interaction --no-root
       - name: Install DeepFilterNet
         working-directory: DeepFilterNet
         run: poetry install -E eval --no-interaction
       - name: Run Test
         working-directory: DeepFilterNet
         run: |
-          source $VENV
+          poetry run df/scripts/test_df.py
+          # source $VENV
           # python df/scripts/test_df.py
