--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -24,6 +24,7 @@ include = [
 deepfilterlib = {path = "../pyDF"}
 deepfilterdataloader = {path = "../pyDF-data", optional = true}
 python = ">=3.7,<4.0"
+typing_extensions = "^4.0"
 numpy = ">=1.20,<2.0"
 loguru = ">=0.5"
 icecream = { version = ">=2,<3", optional = true }
