--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -12,21 +12,21 @@ on:
 
 jobs:
   test-df-output:
-    runs-on: ${{ matrix.os.name }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         python: ["3.9"]
-        pytorch: ["1.10.0"]
-        os:
-          - name: "ubuntu-latest"
-            platform: "linux"
-          - name: "macos-latest"
-            platform: "darwin"
-          - name: "windows-latest"
-            platform: "windows"
         # python: ["3.7", "3.8", "3.9", "3.10"]
-        # os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        pytorch: ["1.10.0"]
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        include:
+          - os: "ubuntu-latest"
+            install-cmd: "sudo apt-get update && sudo apt-get install --no-install-recommends"
+          - os: "macos-latest"
+            install-cmd: "brew install"
+          - os: "windows-latest"
+            install-cmd: "choco install"
     defaults:
       run:
         shell: bash
@@ -42,7 +42,7 @@ jobs:
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: ${{ matrix.os.name }}-cargo-${{ hashFiles('**/Cargo.toml') }}
+          key: ${{ matrix.os }}-cargo-${{ hashFiles('**/Cargo.toml') }}
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with: {profile: "minimal", toolchain: "stable"}
@@ -51,11 +51,11 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
       - name: Load cached Poetry installation
-        if: matrix.os.name != 'windows-latest'
+        if: matrix.os != 'windows-latest'
         uses: actions/cache@v2
         with:
           path: ~/.local
-          key: poetry-${{ matrix.os.name }}-${{ matrix.python }}-${{ matrix.pytorch }}-${{ hashFiles('.github/workflows/test_df.yml') }}
+          key: poetry-${{ matrix.os }}-${{ matrix.python }}-${{ matrix.pytorch }}-${{ hashFiles('.github/workflows/test_df.yml') }}
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
@@ -67,15 +67,15 @@ jobs:
         with:
           path: |
             ~/.cache/
-          key: venv-${{ matrix.os.name }}-${{ matrix.python }}-${{ matrix.pytorch }}-${{ hashFiles('DeepFilterNet/pyproject.toml') }}
+          key: venv-${{ matrix.os }}-${{ matrix.python }}-${{ matrix.pytorch }}-${{ hashFiles('DeepFilterNet/pyproject.toml') }}
       - name: Install runtime dependencies and DeepFilterNet
         working-directory: DeepFilterNet
         run: |
           poetry install -E eval --no-interaction --no-root
           poetry run poe install-torch-cpu
-          # source $VENV
-          # pip install torch==${{matrix.pytorch}} torchaudio
-          # echo "PYTHONPATH=$PYTHONPATH:$PWD/DeepFilterNet" >> $GITHUB_ENV
+          echo "PYTHONPATH=$PYTHONPATH:$PWD/DeepFilterNet" >> $GITHUB_ENV
+      - name: Install Octave
+        run: ${{matrix.install-cmd}} octave
       - name: Run Test
         working-directory: DeepFilterNet
         run: |
