--- a/DeepFilterNet/pyproject.toml
+++ b/DeepFilterNet/pyproject.toml
@@ -42,8 +42,8 @@ deepFilter = "df.enhance:main"
 poethepoet = "^0.11.0"
 
 [tool.poe.tasks]
-install-torch-cuda111 = "python -m pip install torch==1.10.0+cpu torchaudio==0.10.0+cu111 --extra-index-url https://download.pytorch.org/whl/cu111/"
-install-torch-cpu = "python -m pip install torch==1.10.0+cpu torchaudio==0.10.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu/"
+install-torch-cuda111 = "python -m pip install torch==1.10.0 torchaudio==0.10.0 --extra-index-url https://download.pytorch.org/whl/cu111/"
+install-torch-cpu = "python -m pip install torch==1.10.0 torchaudio==0.10.0 --extra-index-url https://download.pytorch.org/whl/cpu/"
 
 [build-system]
 requires = ["poetry>=1.0"]
