--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -17,16 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         python: ["3.9"]
-        # python: ["3.7", "3.8", "3.9", "3.10"]
-        pytorch: ["1.10.0"]
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        include:
-          - os: "ubuntu-latest"
-            install-cmd: "sudo apt-get update && sudo apt-get install --no-install-recommends"
-          - os: "macos-latest"
-            install-cmd: "brew install"
-          - os: "windows-latest"
-            install-cmd: "choco install"
     defaults:
       run:
         shell: bash
@@ -75,7 +66,8 @@ jobs:
           poetry run poe install-torch-cpu
           echo "PYTHONPATH=$PYTHONPATH:$PWD/DeepFilterNet" >> $GITHUB_ENV
       - name: Install Octave
-        run: ${{matrix.install-cmd}} octave
+        if: ${{matrix.os}} == "ubuntu-latest"
+        run: sudo apt-get update && sudo apt-get install --no-install-recommends octave
       - name: Run Test
         working-directory: DeepFilterNet
         run: |
