--- a/.github/workflows/test_df.yml
+++ b/.github/workflows/test_df.yml
@@ -66,7 +66,7 @@ jobs:
           poetry run poe install-torch-cpu
           echo "PYTHONPATH=$PYTHONPATH:$PWD/DeepFilterNet" >> $GITHUB_ENV
       - name: Install Octave
-        if: ${{matrix.os}} == "ubuntu-latest"
+        if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install --no-install-recommends octave
       - name: Run Test
         working-directory: DeepFilterNet
